--- a/viewonly_page.html
+++ b/viewonly_page.html
@@ -217,7 +217,7 @@
         // For example, if api.php is in 'C:\xampp\htdocs\api.php', then API_URL is 'http://localhost/api.php'
         // If it's in 'C:\xampp\htdocs\LOGIN\api.php', then API_URL is 'http://localhost/LOGIN/api.php'
         const API_URL = 'http://localhost/LOGIN/api.php';
-        const LOGOUT_URL = 'index.html'; // Assuming logout simply redirects to login page
+        const LOGOUT_URL = 'https://kapqph.github.io/logbook'; // Assuming logout simply redirects to login page
         /**
          * Displays a message in the message box.
          * @param {string} message - The message to display.
