--- a/admin_page.html
+++ b/admin_page.html
@@ -302,7 +302,7 @@
         console.log("KAPAMALQ Document Management script loaded.");
 
         const API_URL = 'http://localhost/LOGIN/api.php';
-        const LOGOUT_URL = 'loginpage.html';
+        const LOGOUT_URL = 'index.html';
 
         function showMessage(message, isError = false) {
             const messageBox = document.getElementById('messageBox');
